<resources>
    <string name="app_name" translatable="false">FamilyTrackingApplication</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_map_main_screen">Map</string>
    <string name="title_activity_maps_activi_y">Map</string>
    <string name="title_activity_maps">MapMainScreen</string>


    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="familymembers">Family members</string>


    <!-- Strings related to Register -->
    <string name="errpasswordtooshort">Password is too short</string>
    <string name="erremail">Email is invalid</string>
    <string name="errempty">Please fill in all boxes</string>
    <string name="titlecreateacc">Create Account</string>
    <!-- Strings related to Map -->

    <string name="last_seen">Last seen: </string>
    <string name="ago">ago</string>
    <string name="now">now</string>

    <string name="years">years</string>
    <string name="months">months</string>
    <string name="days">days</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>

    <!-- Strings related to Map -->
    <string name="familydetails">Family details:</string>
    <string name="familyid">Unique Identifier:</string>
    <string name="familycreator">Creator:</string>
    <string name="familyname">Name:</string>
    <string name="errcantlocate">Location unknown</string>
    <string name="sossent">SOS sent successfully</string>
    <string name="hello">Hello </string>

    <!-- Strings relatedsettingsings-->
    <string name="settingmarkerseset">Marker colours</string>
    <string name="settingmarkerdesc">Adjust marker colours for each member</string>


    <!-- Strings relatedsettingsings-->
    <string name="markercolor">Choose color of the marker for members</string>
    <string name="btnsave">Save</string>


    <string name="msgsaved">Marker colour has been saved</string>

    <string name="coloursaved">Marker colour has been saved for </string>
    <string name="register">REGISTER</string>
    <string name="login">SIGN IN</string>
    <string name="registerlbl">New user? Register for free</string>
    <string name="loginlbl">"Already a user? Login"</string>
    <string name="lblenteremail">"Enter your email"</string>
    <string name="lblenterpass">"Enter your password"</string>
    <string name="lbluse6char">"Use at least 6 characters"</string>
    <string name="btnnext">"Next"</string>
    <string name="btncreate">"Create"</string>

    <string name="lblenterfname">"Please enter your first name"</string>
    <string name="lblenterlname">"Please enter your last name"</string>
    <string name="errpasswords">Passwords are not identical</string>

    <!-- Strings drawer menu-->
    <string name="drawerfamilymembertracking">Family members tracking</string>
    <string name="features">Features</string>
    <string name="chat">Chat</string>
    <string name="sos">SOS</string>
    <string name="family">Family</string>
    <string name="myfamily">My Family</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="signout">Sign out</string>
    <string name="other">Other</string>

    <string name="language">Language</string>
    <string name="languagedesc">Choose language</string>

    <string name="btncreatefamily">Create new family</string>
    <string name="titlefamsetup">Family Set up</string>
    <string name="btnjoinfamily">Join family</string>


    <string name="lbljoinfamily">Join an existing family</string>
    <string name="lblcreatefamily">Create new family</string>

    <string name="titlejoinfamily">Join family</string>
    <string name="btnjoin">Join</string>
    <string name="lblfamilyid">Please enter family unique identifier</string>
    <string name="lblfamilypass">Please enter family password</string>
    <string name="titlenewfamily">Create new family</string>
    <string name="lblfamilyname">Family name</string>
    <string name="lblenterfamilypass">Enter family password</string>
    <string name="lblenterfamilyrepass">Re-enter family password</string>

    <string name="errconnection">Fail! Check your internet connection</string>
    <string name="newacccreated">Success! New account was created</string>
    <string name="erremailinuse">Fail! Email is already in use!</string>
    <string name="errserveroff"> Sorry. Our server is currently offline</string>
    <string name="familydetails2">Family Details</string>
    <string name="colormakersetting">Colours marker setting</string>
    <string name="errnetworkproblem">Network problem</string>

    <string name="clearchathistory">Clear chat history</string>
    <string name="clearchathistorydesc">Delete all chat messages</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="removechatmessages">Are you sure? This action will delete ALL chat messages.</string>
    <string name="allmsgremoved">All messages removed</string>
    <string name="areyousure">Are you sure?</string>

    <string name="logoutmsg">Are you sure, you want to sign out?"</string>


    <string name="chatwith">Send message to:</string>
    <string name="colorsmarkersetting">Marker settings</string>

    <string name="errwrongcred">You have entered wrong email or password. Please try again.</string>
    <string name="loginsu">Login successful</string>
    <string name="error">Error:</string>

    <string name="familycreated1">Family created successfully</string>
    <string name="familycreated2">Family unique identifier is: </string>
    <string name="familycreated3">Details about family can be found in MyFamily tab</string>

    <string name="msgjoinedfamily">You have joined family</string>
    <string name="msgfamilydoesnotexist">Family does not exist</string>
    <string name="msgwrongfamilypass">Wrong family join password</string>
    <string name="msgalreadyamember">You are already a member of family</string>
    <string name="msgplseneterfnamelnmae">Please enter first name and last name</string>

    <string name="sosnotification">SOS received from:</string>
    <string name="newmembernotification">New member has joined your family</string>
    <string name="newchatmessagenotifcation">New chat message received</string>




    <string name="color0">Azure</string>
    <string name="color1">Blue</string>
    <string name="color2">Cyan</string>
    <string name="color3">Green</string>
    <string name="color4">Magenta</string>
    <string name="color6">Red</string>
    <string name="color7">Rose</string>
    <string name="color8">Purple</string>
    <string name="color9">Yellow</string>
    <string name="color5">Orange</string>


</resources>
