<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue1"
    tools:context="com.honoursproject.radoslawburkacki.familytrackingapplication.Join_family">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="368dp"
        android:layout_height="551dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            android:text="@string/titlejoinfamily"
            android:textColor="@color/mywhite"
            android:textSize="36sp" />


        <Button
            android:id="@+id/btnjoinFamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="21dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:width="150dp"
            android:background="@drawable/btnlogin"
            android:text="@string/btnjoin" />

        <EditText
            android:id="@+id/familyid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:layout_below="@+id/title"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="42dp"
            android:layout_marginTop="95dp"
            android:background="@drawable/edittext"
            android:ems="9"
            android:inputType="number"
            android:paddingBottom="3sp"
            android:paddingLeft="3sp"
            android:paddingTop="3sp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/familypassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/familyid"
            android:layout_alignStart="@+id/familyid"

            android:layout_below="@+id/textView7"
            android:background="@drawable/edittext"
            android:ems="9"
            android:inputType="textPassword"
            android:paddingBottom="3sp"
            android:paddingLeft="3sp"
            android:paddingTop="3sp"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/familypassword"
            android:layout_alignStart="@+id/familypassword"
            android:layout_marginBottom="39dp"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="76dp"
            android:text="@string/lblfamilyid"
            android:textColor="@color/mywhite" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/familypassword"
            android:layout_alignStart="@+id/familypassword"
            android:layout_below="@+id/familyid"
            android:layout_marginTop="30dp"
            android:text="@string/lblfamilypass"
            android:textColor="@color/mywhite" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
